[package]
name = "stdinbot"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
argh = "0.1.4"
futures = "0.3.8"
telegram-bot = "0.8.0"
tokio = {version="0.2",features=["rt-core","net","time","sync","stream","io-std"]}
tokio-util = {version="0.3", features=["codec"]}

[profile.release]
opt-level = "s"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'
